Some minor fixes

--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -189,7 +189,7 @@
                 <ng-template pTemplate="caption">
                     <div class="table-caption">
                         <button pButton type="button" icon="pi pi-download" label="Export to CSV" class="p-button-sm"
-                            (click)="dt.exportCSV()">
+                            (click)="export()">
                         </button>
                     </div>
                 </ng-template>
