--- a/src/app/pages/main/tracking/tracking.component.scss
+++ b/src/app/pages/main/tracking/tracking.component.scss
@@ -4,6 +4,7 @@
     bottom: 20px;
     right:20px;
     font-family: 'Urbanist', sans-serif;
+    transition: height 0.3s ease, opacity 0.3s ease;
 }
 
 
