--- a/src/app/pages/main/tracking/tracking.component.html
+++ b/src/app/pages/main/tracking/tracking.component.html
@@ -204,6 +204,29 @@
                     </div>
                 }
 
+                @if(showPlaybackControls) {
+                    <div (mouseenter)="disableMapInteractions()" (mouseleave)="enableMapInteractions()" class="playback-control p-4 surface-card border-round shadow-8">
+                        <span class="font-bold text-2xl">{{ playbackControlObject?.status }}</span>
+                        <div class="flex flex-column">
+                            <p class="font-bold text-lg">Controls</p>
+                            <div class="flex justify-content-between align-items-center">
+                                <p-button icon="pi pi-play-circle" [rounded]="true" severity="success" (click)="handlePlaybackControls('play')"></p-button>
+                                <p-button icon="pi pi-pause-circle" [rounded]="true" severity="secondary" (click)="handlePlaybackControls('pause')"></p-button>
+                                <p-button icon="pi pi-refresh" [rounded]="true" severity="danger" (click)="handlePlaybackControls('reset')"></p-button>
+                                <p-button icon="pi pi-times-circle" [rounded]="true" severity="danger" (click)="handlePlaybackControls('close')"></p-button>
+                            </div>
+                        </div>
+                        <div class="flex flex-column">
+                            <p class="font-bold text-lg">Speed: {{ playbackControlObject?.speed }} km/hr</p>
+                            <p-slider styleClass="w-full" [ngModel]="playbackControlObject.speed" [min]="500" [max]="10000" [step]="50" (onChange)="handlePlaybackControls('updatespeed' ,$event)"></p-slider>
+                        </div>
+                        <div>
+                            <p class="font-bold text-lg">Progress: {{ playbackControlObject?.progress?.toFixed(2) }} %</p>
+                            <p-slider styleClass="w-full" [ngModel]="playbackControlObject.progress" [min]="0" [max]="100" [step]="0.1" (onChange)="handlePlaybackControls('updateprogress' ,$event)"></p-slider>
+                        </div>
+                    </div>
+                }
+
             </div>
         </div>
 
