--- a/src/app/pages/main/tracking/tracking.component.scss
+++ b/src/app/pages/main/tracking/tracking.component.scss
@@ -15,6 +15,16 @@
     font-family: 'Urbanist', sans-serif;
 }
 
+.playback-control {
+    position: absolute;
+    z-index: 999;
+    top: 20px;
+    right:20px;
+    font-family: 'Urbanist', sans-serif;
+    width: 20vw;
+    height: auto;
+}
+
 
 .info-window-contents{
     height: 160px;
