Commented SIM Details

--- a/src/app/pages/main/tracking/tracking.component.html
+++ b/src/app/pages/main/tracking/tracking.component.html
@@ -57,11 +57,10 @@
                         </div>
 
                         <!-- SIM Details Title -->
-                        <h3 class="text-lg font-bold mb-3 mt-5 text-700">SIM Details</h3>
+                        <!-- <h3 class="text-lg font-bold mb-3 mt-5 text-700">SIM Details</h3> -->
 
                         <!-- SIM Details Grid -->
-                        <div class="grid grid-nogutter">
-                            <!-- First Row of 3 Items -->
+                        <!-- <div class="grid grid-nogutter">
                             <div class="col-12 md:col-4">
                                 <p class="font-bold">Provider:</p>
                                 <p>{{ selectedVehicle?.sim?.provider || 'N/A' }}</p>
@@ -75,7 +74,6 @@
                                 <p>{{ selectedVehicle?.sim?.pSim || 'N/A' }}</p>
                             </div>
 
-                            <!-- Second Row of SIM Details -->
                             <div class="col-12 md:col-4">
                                 <p class="font-bold">Primary Operator:</p>
                                 <p>{{ selectedVehicle?.sim?.pOpt || 'N/A' }}</p>
@@ -88,7 +86,7 @@
                                 <p class="font-bold">Secondary Operator:</p>
                                 <p>{{ selectedVehicle?.sim?.sOpt || 'N/A' }}</p>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Location Information Title -->
                         <h3 class="text-lg font-bold mb-3 mt-5">Location Information</h3>
