Some changes and adddress service

--- a/src/app/pages/main/tracking/tracking.component.html
+++ b/src/app/pages/main/tracking/tracking.component.html
@@ -25,8 +25,14 @@
                                 'text-gray-500': selectedVehicle?.status === 'OFFLINE',
                                 'flex align-items-center justify-content-center border-round': true
                               }" class="text-2xl font-bold">{{selectedVehicle?.vehicleNo}}</span>
-                            <span class="text-sm">{{selectedVehicle.location?.lastUpdate | date:'medium'}}</span>
-                            <span class="text-sm">Address Aaega Idhrr</span>
+                              <div class="mb-2 flex flex-column">
+                                  <span class="text-sm">{{selectedVehicle.location?.lastUpdate | date:'medium'}}</span> 
+                                  <span class="mr-2 font-bold">Last Update</span>
+                              </div>
+                              <div class="flex flex-column">
+                                <span class="text-sm">{{selectedVehicle.address || '-'}}</span> 
+                                <span class="mr-2 font-bold">Address</span>
+                            </div>
                         </div>
                         <div class="align-items-center">
                             <i (click)="handlePlayback()" class="pi pi-play text-blue-500 cursor-pointer text-xl mb-1 mr-2"></i>
@@ -55,38 +61,6 @@
                                 <p>{{ selectedVehicle?.device?.imei || 'N/A' }}</p>
                             </div>
                         </div>
-
-                        <!-- SIM Details Title -->
-                        <!-- <h3 class="text-lg font-bold mb-3 mt-5 text-700">SIM Details</h3> -->
-
-                        <!-- SIM Details Grid -->
-                        <!-- <div class="grid grid-nogutter">
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Provider:</p>
-                                <p>{{ selectedVehicle?.sim?.provider || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">ICCID:</p>
-                                <p>{{ selectedVehicle?.sim?.iccid || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Primary SIM:</p>
-                                <p>{{ selectedVehicle?.sim?.pSim || 'N/A' }}</p>
-                            </div>
-
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Primary Operator:</p>
-                                <p>{{ selectedVehicle?.sim?.pOpt || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Secondary SIM:</p>
-                                <p>{{ selectedVehicle?.sim?.sSim || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Secondary Operator:</p>
-                                <p>{{ selectedVehicle?.sim?.sOpt || 'N/A' }}</p>
-                            </div>
-                        </div> -->
 
                         <!-- Location Information Title -->
                         <h3 class="text-lg font-bold mb-3 mt-5">Location Information</h3>
@@ -118,7 +92,7 @@
                             </div>
                             <div class="col-12 md:col-4">
                                 <p class="font-bold">GPS Fix:</p>
-                                <p>{{ selectedVehicle?.location?.gpsFix || 'N/A' }}</p>
+                                <p>{{ selectedVehicle?.location?.gpsFix ? 'FIX' : 'UNFIX'}}</p>
                             </div>
                         </div>
 
@@ -127,64 +101,54 @@
 
                         <!-- Location Attributes Grid -->
                         <div class="grid grid-nogutter">
-                            <!-- First Row of Location Attributes -->
-                            <div class="col-12 md:col-4">
+                            <!-- <div class="col-12 md:col-4">
                                 <p class="font-bold">ADC1:</p>
                                 <p>{{ selectedVehicle?.location?.attributes?.adc1 || 'N/A' }} V</p>
                             </div>
                             <div class="col-12 md:col-4">
                                 <p class="font-bold">ADC2:</p>
                                 <p>{{ selectedVehicle?.location?.attributes?.adc2 || 'N/A' }} V</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Battery:</p>
-                                <p>{{ selectedVehicle?.location?.attributes?.battery || 'N/A' }}%</p>
-                            </div>
+                            </div> -->
 
-                            <!-- Second Row of Location Attributes -->
                             <div class="col-12 md:col-4">
                                 <p class="font-bold">Charge:</p>
                                 <p>{{ selectedVehicle?.location?.attributes?.charge || 'N/A' }}</p>
                             </div>
                             <div class="col-12 md:col-4">
-                                <p class="font-bold">Distance:</p>
-                                <p>{{ selectedVehicle?.location?.attributes?.distance || 'N/A' }} km</p>
+                                <p class="font-bold">Internal Battery:</p>
+                                <p>{{ selectedVehicle?.location?.attributes?.battery || 'N/A' }} V</p>
                             </div>
                             <div class="col-12 md:col-4">
-                                <p class="font-bold">Engine Hours:</p>
-                                <p>{{ selectedVehicle?.location?.attributes?.engHours || 'N/A' }} hrs</p>
+                                <p class="font-bold">Ignition:</p>
+                                <p>{{ selectedVehicle?.location?.attributes?.ign || 'N/A' }}</p>
                             </div>
 
-                            <!-- Third Row of Location Attributes -->
-                            <div class="col-12 md:col-4">
+                            <!-- <div class="col-12 md:col-4">
                                 <p class="font-bold">HDOP:</p>
                                 <p>{{ selectedVehicle?.location?.attributes?.hdop || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
+                            </div> -->
+                            <!-- <div class="col-12 md:col-4">
                                 <p class="font-bold">RSSI:</p>
                                 <p>{{ selectedVehicle?.location?.attributes?.rssi || 'N/A' }}</p>
-                            </div>
+                            </div> -->
                             <div class="col-12 md:col-4">
                                 <p class="font-bold">Satellites:</p>
                                 <p>{{ selectedVehicle?.location?.attributes?.sat || 'N/A' }}</p>
                             </div>
+                            <div class="col-12 md:col-4">
+                                <p class="font-bold">Operator:</p>
+                                <p>{{ selectedVehicle?.location?.attributes?.operator || 'N/A' }}</p>
+                            </div>
+                            <div class="col-12 md:col-4">
+                                <p class="font-bold">Ext Batt Voltage:</p>
+                                <p>{{ selectedVehicle?.location?.attributes?.maininput || 'N/A' }}</p>
+                            </div>
+                            <!-- <div class="col-12 md:col-4">
+                                <p class="font-bold">GPS Fix:</p>
+                                <p>{{ selectedVehicle?.location?.gpsFix ? 'FIX' : 'UNFIX' }}</p>
+                            </div> -->
                         </div>
 
-                        <!-- Additional Location Attributes -->
-                        <div class="grid grid-nogutter">
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Status:</p>
-                                <p>{{ selectedVehicle?.location?.attributes?.status || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">V Status:</p>
-                                <p>{{ selectedVehicle?.location?.attributes?.vStatus || 'N/A' }}</p>
-                            </div>
-                            <div class="col-12 md:col-4">
-                                <p class="font-bold">Version FW:</p>
-                                <p>{{ selectedVehicle?.location?.attributes?.versionFw || 'N/A' }}</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
@@ -215,7 +179,7 @@
                             </div>
                         </div>
                         <div class="flex flex-column">
-                            <p class="font-bold text-lg">Speed: {{ playbackControlObject?.speed }} km/hr</p>
+                            <p class="font-bold text-lg">Adjust Replay Speed</p>
                             <p-slider styleClass="w-full" [ngModel]="playbackControlObject.speed" [min]="500" [max]="10000" [step]="50" (onChange)="handlePlaybackControls('updatespeed' ,$event)"></p-slider>
                         </div>
                         <div>
