--- a/src/app/pages/main/tracking/vehicle-list/vehicle-list.component.html
+++ b/src/app/pages/main/tracking/vehicle-list/vehicle-list.component.html
@@ -1,4 +1,4 @@
-<div class="p-3 overflow-auto" style="height: 580px;">
+<div class="overflow-auto" style="height: 570px;">
     @for (vehicle of list; track $index) {
     <div class="mt-3 surface-card shadow-2 p-3 border-round cursor-pointer transition-all hover:shadow-4 hover:scale-105"
         style="transition: transform 0.3s, box-shadow 0.3s;">
