--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -1,4 +1,131 @@
-<div class=" bg-gray-200 px-4 py-5 md:px-6 lg:px-8">
+<div class="h-screen bg-gray-200 px-4 py-5 md:px-6 lg:px-8">
+    <!-- <gridster [options]="gridsteroptions" style="background:none">
+        @for (item of dashboard; track $index) {
+        <gridster-item [item]="item" style="border-radius: 8px;">
+                @if (item['lastPosition']) {
+                    <div class="surface-card shadow-2 p-3 border-round">
+                            <div class="flex justify-content-between">
+                                <div class="mb-3" [ngClass]="item['textColorClass'] + ' text-5xl'">{{ item['count'] }}</div>
+                                <div class="flex align-items-center justify-content-center">
+                                    <ng-lottie width="60px" height="60px" [options]="{ path: item['lottiePath'] }" />
+                                </div>
+                            </div>
+                            <div class="flex justify-content-between mt-2">
+                                <span class="block text-2xl text-500 font-bold">{{ item['label'] }}</span>
+                                <div class="flex align-items-center justify-content-center">
+                                    <i (click)="onInfoClick($event,item)"
+                                    class="pi pi-info-circle font-bold text-xl text-primary-500 cursor-pointer"></i>
+                                </div>
+                            </div> 
+                    </div>
+                }
+
+                @if(item['totalComplaints']) {
+                    <p-panel styleClass="shadow-3 border-round-3xl">
+                        <ng-template pTemplate="header">
+                            <div class="flex align-items-center">
+                                <span class="text-2xl font-bold">Total Complaint Lodge</span>
+                                <ng-lottie  width="40px" height="40px" [options]="{ path: '/assets/lottie/complaint.json' }" /> 
+        
+                            </div>
+                        </ng-template>
+                        <ng-template pTemplate="icons">
+                          <span class="text-3xl text-indigo-500 font-bold">{{ totalComplaints || 0 }}</span>
+                        </ng-template>
+                        <div class="grid">
+                            <div *ngFor="let stat of complaintStats" class="col-12 md:col-6 lg:col-6">
+                                <div class="surface-300 shadow-2 p-3 border-round">
+                                    <div class="flex justify-content-between">
+                                        <div>
+                                            <div class="mb-3" [ngClass]="'text-' + stat.colorClass + '-500 text-5xl'">{{ stat.count }}</div>
+                                            <span class="block text-500 font-bold text-2xl">{{ stat.status }}</span>
+                                        </div>
+                                        <div class="flex align-items-center justify-content-center" style="width:5rem;height:5rem">
+                                        <ng-lottie  width="100px" height="100px" [options]="{ path: stat.lottiePath }" /> 
+                                        </div>
+                                    </div>
+                                    <div class="flex justify-content-between mt-2 align-items-center">
+                                        <div class="w-full border-round" [ngClass]="'bg-' + stat.colorClass + '-500'" style="height: 5px;">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-right">
+                            <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
+                        </div>
+                      </p-panel>
+                }
+
+                @if(item['SOSALertOverSpeed']) {
+                            <p-panel styleClass="shadow-3 border-round-3xl">
+                                <ng-template pTemplate="header">
+                                    <div class="flex align-items-center">
+                                        <span class="text-2xl font-bold">{{ item['title'] }}</span>
+                                        <ng-lottie  width="40px" height="40px" [options]="{ path: item['lottiePath'] }" /> 
+                                    </div>
+                                </ng-template>
+                                <div class="p-1 border-round" [ngClass]="item['bgClass']">
+                                    <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
+                                        <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">{{ item['value'] }}</span>
+                                    </div>
+                                </div>
+                                <div class="text-right">
+                                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"
+                                        (click)="onInfoClick($event,item,op)" (mouseenter)="item['title'] === 'Alert' && onInfoClick($event,item,op)">
+                                            <p-overlayPanel #op appendTo="body">    
+                                                <app-generic-overlay
+                                                [title]="item['title']" [data]="item['response']" [fields]="item['fields'] ?? []"/>
+                                            </p-overlayPanel>
+                                        </i>
+                                    </div>
+                                </p-panel>
+                }
+
+                @if(item['vehicleInstallation']) {
+                    <p-panel styleClass="shadow-3 border-round-3xl">
+                        <ng-template pTemplate="header">
+                            <span class="text-3xl font-bold" >Vehicle Category Wise Installation</span>
+                            <ng-lottie  width="65px" height="65px" [options]="{ path: '/assets/lottie/installation.json' }" /> 
+                        </ng-template>
+                        <ng-template pTemplate="icons">
+                            
+                        </ng-template>
+                        <div class="grid">
+                            <div class="col-12 md:col-6 lg:col-6">
+                                <h2 class="text-center" >Installed / Total Vehicles</h2>
+                                <div class="flex justify-content-center align-items-center">
+                                    <p-knob min="0" [max]="maxKnobvalue" [(ngModel)]="totalvehicleInstallation" [readonly]="true" [size]="200" [strokeWidth]="10" />
+                                </div>
+                            </div>
+                            <div class="col-12 md:col-6 lg:col-6">
+                                <div style="height: 375px;" class="p-5 overflow-auto">
+                                    @for (vehicle of vehicleInstallationTypes; track $index) {
+                                        <div class="col-12 md:col-12 lg:col-12">
+                                            <div (click)="onInfoClick($event,vehicle)" class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between p-4 hover:bg-primary hover:shadow-5 transition-all cursor-pointer">
+                                                <span class="text-xl font-bold">{{vehicle.categoryName}}</span>
+                                                <span class="text-lg mb-2">{{vehicle?.deviceCount}} / {{!vehicle?.totalCount ? vehicle?.deviceCount : vehicle?.totalCount}}</span>
+                                            </div>
+                                        </div>
+                                        
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </p-panel>
+                }
+
+                @if(item['dashboardMap']) {
+                    <div 
+                        style="height: 500px" leaflet 
+                        (leafletMapReady)="onMapReady($event)" 
+                        [leafletOptions]="leafletOptions">
+                    </div>
+                }
+                   
+        </gridster-item>
+        }
+    </gridster> -->
 
     <div class="grid mb-4">
         @for (vehicle of vehicleStatusOverview; track $index) {
@@ -8,7 +135,7 @@
                         <div class="mb-3" [ngClass]="vehicle.textColorClass + ' text-5xl'">{{ vehicle.count }}</div>
                         <div class="flex align-items-center justify-content-center">
                         <ng-lottie  width="60px" height="60px" [options]="{ path: vehicle.lottiePath }" /> 
-                            <!-- <i class="pi pi-car" [ngClass]="vehicle.textColorClass + ' text-5xl'"></i> -->
+                          
                         </div>
                     </div>
                     <div class="flex justify-content-between mt-2">
@@ -30,9 +157,7 @@
                         <span class="text-2xl font-bold">Total Complaint Lodge</span>
                         <ng-lottie  width="40px" height="40px" [options]="{ path: '/assets/lottie/complaint.json' }" /> 
 
-                        <!-- <img src="assets/images/complaints.png" alt="complaints" class="ml-3" width="45px" /> -->
                     </div>
-                    <!-- <span class="text-3xl font-bold" >Total Complaint Lodge</span> -->
                 </ng-template>
                 <ng-template pTemplate="icons">
                   <span class="text-3xl text-indigo-500 font-bold">{{ totalComplaints || 0 }}</span>
@@ -47,7 +172,6 @@
                                 </div>
                                 <div class="flex align-items-center justify-content-center" style="width:5rem;height:5rem">
                                 <ng-lottie  width="100px" height="100px" [options]="{ path: stat.lottiePath }" /> 
-                                    <!-- <i class="pi" [ngClass]="stat.icon + ' text-' + stat.colorClass + '-500 text-5xl'"></i> -->
                                 </div>
                             </div>
                             <div class="flex justify-content-between mt-2 align-items-center">
@@ -70,7 +194,6 @@
                     <div class="flex align-items-center">
                         <span class="text-2xl font-bold">{{ panel.title }}</span>
                         <ng-lottie  width="40px" height="40px" [options]="{ path: panel.lottiePath }" /> 
-                        <!-- <img [src]="panel.image" [alt]="panel.title" class="ml-2" style="width: 45px;" /> -->
                     </div>
                 </ng-template>
                 <div class="p-1 border-round" [ngClass]="panel.bgClass">
@@ -105,9 +228,7 @@
                     <ng-lottie  width="65px" height="65px" [options]="{ path: '/assets/lottie/installation.json' }" /> 
                 </ng-template>
                 <ng-template pTemplate="icons">
-                    <!-- <button class="p-panel-header-icon p-link mr-2">
-                        <span class="pi pi-filter"></span>
-                    </button> -->
+                    
                 </ng-template>
                 <div class="grid">
                     <div class="col-12 md:col-6 lg:col-6">
@@ -139,7 +260,6 @@
                         <ng-template pTemplate="header">
                             <div class="flex align-items-center justify-content-between">
                                 <span class="text-3xl font-bold" >Registered</span>
-                                <!-- <ng-lottie  width="50px" height="50px" [options]="{ path: '/assets/lottie/complaint.json' }" />  -->
                                 <img src="assets/images/registered.png" alt="register" class="ml-3" width="50px" height="50px" />
                             </div>
                         </ng-template>
@@ -195,7 +315,6 @@
                         <ng-template pTemplate="header">
                             <span class="text-3xl font-bold" >Renewal</span>
                             <img src="assets/images/renewal.png" alt="register" class="ml-3" width="50px" height="50px" />
-                            <!-- <ng-lottie  width="50px" height="50px" [options]="{ path: '/assets/lottie/complaint.json' }" />  -->
                         </ng-template>
                             @for (item of renewalStatus; track $index) {
                                 <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 border-round ' + item.bgColor">
@@ -233,8 +352,5 @@
     </div>
 </div>
 
-<app-generic-dialog 
-    [enableSaveBtn]="false" [header]="currentInfoTitle"
-    [isTable]="true" [tableData]="currentInfoData" [tableColumns]="currentInfoColumns"
-    [modal]="true" [visible]="infoDialog" (onHide)="onHideDialog($event)"
-/>
+<app-generic-dialog [enableSaveBtn]="false" [header]="currentInfoTitle" [isTable]="true" [tableData]="currentInfoData"
+    [tableColumns]="currentInfoColumns" [modal]="true" [visible]="infoDialog" (onHide)="onHideDialog($event)" />
