--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -44,6 +44,11 @@
         (selectionChange)="onSelectionChange($event)" [rowsPerPageOptions]="[10, 25, 50]"
         styleClass="p-datatable-sm p-datatable-gridlines">
 
+        <!-- <ng-template pTemplate="caption">
+            <span class="text-xl p-4">{{header}}</span>
+        </ng-template> -->
+        
+
         <!-- Dynamic Columns -->
         <ng-template pTemplate="header">
             <tr>
