--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,3 +97,7 @@ body .p-component
 .p-menubar .p-submenu-list {
   z-index: 9999;
 }
+
+.leaflet-routing-alternatives-container{
+  display: none;
+}
